# ai-orchestrator

./: README.md  pyproject.toml
config/: model_config.yaml  subagents_config.json
scratch/: deep_agents.py  mcp_server.py
src/aio/core/: agents.py  cli.py  llm_provider.py  streaming_deep_agents.py  supervisor.py  ui.py
src/aio/util/: utils.py
src/rgai/auth/: auth.py
src/rgai/core/: agents.py  llm_provider.py  supervisor.py
src/rgai/util/: utils.py
