[project]
name = "rgai"
version = "0.1.0"
description = "A Multi-Agent AI System"
requires-python = ">=3.12"
dependencies = [
    "langchain_mcp_adapters",
    "langchain_ollama",
    "langchain_openai",
    "deepagents",
    "streamlit",
    "oci"
]

[project.scripts]
rgai = "rgai.core.supervisor:entry_point"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
